Remove class names from small list item and set margin on hr to correct spacing for small list block (#718)

--- a/blocks/top-table-list-block/features/top-table-list/default.scss
+++ b/blocks/top-table-list-block/features/top-table-list/default.scss
@@ -1,5 +1,6 @@
 .top-table-list-section-small {
   hr {
+    margin: calculateRem(16px) 0;
     width: 100%;
   }
 }
